update spark cli instructions